Agent-platform general clean up.
Code changed to better match the style of the core module.